kubernetes/apps/homepage/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - name: web
      port: 3000
      targetPort: web
